
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date:
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/09/18 11:45:00 EDT
Tag: Release_110_36 (retag)
Description:

Fixed mistake in config/preloads. Retagged as 110.36.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/09/18 09:40:00 EDT
Tag: Release_110_36_orig (tag changed)
Description:

New version (110.36).  New bootfiles.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/09/14 16:15:00 EDT
Tag: blume-20010914-x86fastfp
Description:

John committed some changes that Allen made, in particular a (hopefully)
correctly working version of the x86-fp module.

I changed the default setting of the Control.MLRISC.getFlag "x86-fast-fp"
flag to "true".  Everything seems to compile to a fixpoint ok, and
"mandelbrot" speeds up by about 15%.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/09/13 11:20:00 EDT
Tag: blume-20010913-minimal
Description:

1. Stefan Monnier's patch to fix a miscompilation problem that
   was brought to light by John Reppy's work on Moby.

2. Implemented a minimal "structure Compiler" that contains just
   "version" and "architecture".  The minimal version will be
   available when the full version is not.  This is for backward-
   compatibility with code that wants to test Compiler.version.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/08/28 14:03:00 EDT
Tag: blume-20010828-ml-lex
Description:

Fix for bug 1581, received from Neophytos Michael.
